--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   height: 100%;
   width: 100%;
   margin: 0;
@@ -18,3 +18,5 @@ code {
   width: 100%;
   height: 100%;
 }
+
+
